# 3D-engine

./: .gitmodules  CMakeLists.txt  main.cpp
include/: camera.hpp  engine.hpp  mesh.hpp  model.hpp  shader_program.hpp
include/glad/: glad.h
models/castle/: castle.mtl
models/cube/: cube.mtl
models/destroyer/: destroyer.mtl
models/minecraft/: minecraft.mtl
models/nimbasa/: Nimbasa City.mtl
shaders/: fragment.fs  fragment_no_texture.fs  vertex.vs
src/: camera.cpp  engine.cpp  glad.c  mesh.cpp  model.cpp  shader_program.cpp
